Adding logging and extension of model aggregation.